--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,79 +1,77 @@
 /*--------------------------------------------------------------
 # Variables, functions and mixins
 --------------------------------------------------------------*/
-@import "abstracts/variables",
-        "abstracts/functions",
-        "abstracts/mixins",
-        'abstracts/include-media';
+@import 'abstracts/variables', 'abstracts/functions', 'abstracts/mixins',
+  'abstracts/include-media';
 
 /*--------------------------------------------------------------
 1.0 Normalize
 	* normalize.css v7.0.0 | MIT License
 	* github.com/necolas/normalize.css
 --------------------------------------------------------------*/
-@import "normalize";
+@import 'normalize';
 
 /*--------------------------------------------------------------
 # Base
 --------------------------------------------------------------*/
-@import "base/base";
+@import 'base/base';
 
 /*--------------------------------------------------------------
 # Typography
 --------------------------------------------------------------*/
-@import "base/typography";
+@import 'base/typography';
 
 /*--------------------------------------------------------------
 # Helpers
 --------------------------------------------------------------*/
-@import "base/helpers";
+@import 'base/helpers';
 
 /*--------------------------------------------------------------
 # Forms
 --------------------------------------------------------------*/
-@import "components/forms";
+@import 'components/forms';
 
 /*--------------------------------------------------------------
 # Buttons
 --------------------------------------------------------------*/
-@import "components/buttons";
+@import 'components/buttons';
 
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
-@import "layout/header";
+@import 'layout/header';
 
 /*--------------------------------------------------------------
 # Hero
 --------------------------------------------------------------*/
-@import "layout/hero";
+@import 'layout/hero';
 
 /*--------------------------------------------------------------
 # Features
 --------------------------------------------------------------*/
-@import "layout/features";
+@import 'layout/features';
 
 /*--------------------------------------------------------------
 # Faqs
 --------------------------------------------------------------*/
-@import "layout/faqs";
+@import 'layout/faqs';
 
 /*--------------------------------------------------------------
 # CTA
 --------------------------------------------------------------*/
-@import "layout/cta";
+@import 'layout/cta';
 
 /*--------------------------------------------------------------
 # Site content
 --------------------------------------------------------------*/
-@import "layout/main";
+@import 'layout/main';
 
 /*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
-@import "layout/footer";
+@import 'layout/footer';
 
 /*--------------------------------------------------------------
 # Lights
 --------------------------------------------------------------*/
-@import "layout/lights";
+@import 'layout/lights';
